# jupydocs

./: Makefile  README.ipynb  README.md  markdown_testing.ipynb  pyproject.toml
examplepackage/: README.md
examplepackage/examplepackage/: example.py
jupydocs/: __main__.py  cli.py  numpydocstring.py
jupydocs/cli/: build.py
scripts/: build_docs.sh
tests/: example_numpy_docstrings.py  markdown_testing.ipynb  test_cli.py  test_numpy.py  visual_check.ipynb
tests/data/: pyproject_jupydocs.toml  pyproject_no_tool.toml  pyproject_tool.toml
website/: docusaurus.config.js  package-lock.json  sidebars.js
website/blog/: 2020-11-17-jupydocs-in-development.md  2021-05-10-jupydocs-cli.md
website/docs/: api-reference_cli.ipynb  api-reference_cli.md  api-reference_numpydocstring.NumpyDocString.ipynb  api-reference_numpydocstring.NumpyDocString.md  api-reference_numpydocstring.render_class.ipynb  api-reference_numpydocstring.render_class.md  api_reference.ipynb  api_reference.md  api_reference_cli.md  api_reference_numpy_module.ipynb  api_reference_numpy_module.md  contributing_how_to_contribute.md  example.md  getting_started.md  other.md  testing_introduction.md  testing_numpy.ipynb  testing_numpy.md  testing_other.ipynb  testing_other.md  testing_pandas.ipynb  testing_pandas.md  usage.ipynb  usage.md  usage_documenting_classes.ipynb  usage_documenting_classes.md  usage_documenting_functions.ipynb  usage_documenting_functions.md  usage_getting_started.ipynb  usage_getting_started.md  usage_jupydocs_work_flow.ipynb  usage_jupydocs_work_flow.md  usage_why_use_jupydocs.ipynb  usage_why_use_jupydocs.md
website/src/css/: custom.css
website/src/pages/: index.js
