[tool.poetry]
name = "jupydocs"
version = "0.1.2"
description = "Easy Python package documentation using markdown and jupyter"
authors = ["SamEdwardes <edwardes.s@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/SamEdwardes/jupydocs"
documentation = "https://jupydocs.netlify.app/"
keywords = ["python", "docs", "documentation"]

[tool.poetry.dependencies]
python = "^3.7"
ipython = "^7.19.0"
tabulate = "^0.8.7"
plac = "^1.3.0"
tqdm = "^4.55.0"
nbconvert = "^6.0.7"

[tool.poetry.dev-dependencies]
jupyterlab = "^2.2.9"
black = "^20.8b1"
pytest = "^6.1.2"
pandas = "^1.1.4"
nbformat = "^5.0.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
